Edit P2C2 return concept

--- a/src/content/docs/book/part-2-organised-code/2-organising-code/1-concepts/05-return.mdx
+++ b/src/content/docs/book/part-2-organised-code/2-organising-code/1-concepts/05-return.mdx
@@ -20,8 +20,9 @@ export const sliderReturn = [
     altText: "The user launches the program from the command line. The program runs and starts at the main() function on line 1",
     tipStart: 1,
     tips: [
-      "The user launches the program from the command line",
-      "The program runs and starts at the <code>main()</code> function on line 1"
+      "The user launches the program from the command line.",
+      "The program runs and starts at the <code>main()</code> function on line 1.",
+      "The program counter increments to line 2, then line 3."
     ]
   },
   {
@@ -29,8 +30,10 @@ export const sliderReturn = [
     altText: "Line 2 contains a call to write_line(), whose parameter contains a call to test_return() function which will be evaluated first",
     tipStart: 2,
     tips: [
-      "Line 2 contains a call to write_line()",
-      "The parameter of <code>write_line()</code> contains a call to the <code>test_return()</code> function, which will be evaluated (run) first"
+      "Line 2 contains a call to <code>write_line()</code>.",
+      "The argument given to <code>write_line()</code> includes a call to the <code>test_return()</code> function.",
+      "The program counter jumps to line 6, the start of the <code>test_return()</code> function.",
+      "The program counter increments to line 7, then line 8, the first line of the function body."
     ]
   },
   {
@@ -38,7 +41,8 @@ export const sliderReturn = [
     altText: "The first line (line 7) of test_return() contains a call to write_line() which prints 'test-return started' to the terminal",
     tipStart: 3,
     tips: [
-      "The first line (line 7) of <code>test_return()</code> contains a call to <code>write_line()</code> which prints '<em>test-return started</em>' to the terminal"
+      "Line 8 contains a call to <code>write_line()</code> which prints 'test-return started' to the terminal.",
+      "The program counter increments to line 9."
     ]
   },
   {
@@ -46,21 +50,20 @@ export const sliderReturn = [
     altText: "Line 8 then contains a return statement which immediately returns the integer value 3 to the caller, by-passing any other lines below it within the function",
     tipStart: 4,
     tips: [
-      "Line 8 then contains a return statement",
-      "It will immediately return the integer value 3 to the caller, by-passing any other lines below it within the function",
-      "Execution skips to the end of the function (line 10) before returning to the caller",
-      "This means that the <code>write_line()</code> call at line 9 will never be run"
-      
+      "Line 8 contains a <code>return</code> statement.",
+      "It will <strong>immediately</strong> return the integer value 3 to the caller, skipping any other lines below it within the function.",
+      "Execution skips to the end of the function (line 11) before returning to the caller (line 3).",
+      "This means that the <code>write_line()</code> call at line 10 will never be run."
     ]
   },
   {
     src: sliderReturn05.src,
-    altText: "Line 2 then finishes executing by printing it's output to the terminal. In doing so, it utilizes the value 3 which was returned from the call to test_return()",
+    altText: "Line 2 then finishes executing by printing its output to the terminal. In doing so, it utilizes the value 3 which was returned from the call to test_return()",
     tipStart: 5,
     tips: [
-      "Line 2 then finishes executing by printing it's output to the terminal",
-      "In doing so, it utilizes the value 3 which was returned from the call to <code>test_return()</code>"
-      
+      "Line 2 then finishes executing by printing its output to the terminal.",
+      "In doing so, it utilizes the value 3 which was returned from the call to <code>test_return()</code>.",
+      "The program counter is incremented to line 4."
     ]
   },
   {
@@ -68,9 +71,8 @@ export const sliderReturn = [
     altText: "The main() function ends with another return statement - It returns the integer value 0 to the caller",
     tipStart: 6,
     tips: [
-      "The <code>main()</code> function ends with another return statement",
-      "It returns the integer value 0 to the caller",
-      "<strong>NOTE:</strong> The return value 0 is generally used to indicate success to the caller (in this case the bash shell)"
+      "At line 4 the <code>main()</code> function ends with another <code>return</code> statement.",
+      "It returns the integer value 0 (success) to the caller, which in this case is the bash shell."
     ]
   },
   {
@@ -78,7 +80,7 @@ export const sliderReturn = [
     altText: "The caller receives the return value, and the program ends",
     tipStart: 7,
     tips: [
-      "The caller receives the return value, and the program ends",
+      "The caller receives the return value, and the program ends.",
       
     ]
   },
@@ -87,68 +89,59 @@ export const sliderReturn = [
     altText: "In bash shell on linux, the built-in environment variable '$?' contains the status of the last commmand that was run. We can view this by running an 'echo' statement on the command line which will print the status to the terminal. You can see that the test-return program returned 0 to the shell",
     tipStart: 8,
     tips: [
-      "In bash shell on linux, the built-in environment variable '<strong>$?</strong>' contains the status of the last commmand that was run",
-      "We can view this by running an '<code>echo</code>' statement on the command line which will print the status to the terminal",
-      "You can see that the test-return program returned 0 to the shell"
+      "In bash shell on linux, the built-in environment variable '<code>$?</code>' contains the status of the last command that was run.",
+      "We can view this by running an '<code>echo</code>' statement on the command line which will print the status to the terminal.",
+      "You can see that the test-return program returned 0 to the shell."
     ]
   }
 ];
 
+The return statement is a kind of [jump statement](../../../../part-1-instructions/3-control-flow/1-concepts/05-0-jumping) that ends the current [function](../04-function-decl) or [procedure](../02-procedures). This is useful for skipping the rest of function or procedure's block, and returning early to the calling code. In a function, you also use the return statement to provide the value that is sent back to the caller.
 
-The return statement is a kind of [jump statement](../../../../part-1-instructions/3-control-flow/1-concepts/05-0-jumping). It ends the current [function](../04-function-decl) or [procedure](../01-procedures). This is useful for skipping the rest of the processing of the function or procedure, exiting it early and returning to the calling code. In a function, you also use the return statement to provide the value that is sent to the caller.
+![Return ends the current function or procedure](./images/statement-exit.png "Return ends the current function or procedure")
+{/* TODO: add dotted paper background */}
 
-<a id="FigureExit"></a>
+## Return -- when, why, and how
 
-![Figure x.y: Exit ends the current Function or Procedure](./images/statement-exit.png "Exit ends the current Function or Procedure")
-<div class="caption"><span class="caption-figure-nbr">Figure x.y: </span>Exit ends the current Function or Procedure</div><br/>
+There are a couple of reasons why you may want to add a return statement to exit out of the current function or procedure. This includes providing a value from a function, which is the most common use, but can also be used to exit early under certain conditions.
 
-:::note
-
-- Return is an **instruction**, allowing you to jump out of the current function or procedure and return to the calling code.
-- Return should be coded within [branching](../../../../part-1-instructions/3-control-flow/1-concepts/03-0-branching) statements that checks if the function or procedure should end.
-
-The return statement also provides the value that will be returned when exiting from a function. As this sets the value to be returned, you **must** have a return statement as the last instruction within a function.
-
-:::
-
-## Return - Why, When, How
-
-There are a couple of reasons why you may want to add a return statement to exit out of the current function or procedure. This includes providing value from function, but can also be used to exit early under certain conditions.
-
-Every function must return a value, so for every function must return a value at least at the end of the function. You may also need to exit early, and in these cases you will have to return something. So when you do have a function that may end early, you need to work out what it will return to the caller.
-
-When you use return statements to exit a function or procedure early, you need something like an if statement that checks if you should exit, and then put the return statement within the body of the if. This can be used when you know that the procedure or functions only works in certain circumstances, and exit when these are not met. For example, in the change calculator we can exit early if they have not paid enough for the item, or if they have provided the exact value.
+When you use a return statement to exit a function or procedure early, you need something like an [if statement](../../../../part-1-instructions/3-control-flow/1-concepts/03-1-if) that checks if you should exit, and then put the return statement within the body of the if. This can be used when you know that the procedure or functions only works in certain circumstances. For example, in the [change calculator](../../../1-starting-cpp/2-put-together/02-change-calculator) we could exit early if the user has not paid enough for the item, or if they have provided the exact right amount.
 
 ## In C/C++
 
 :::tip[Syntax]
 
-- [Figure 5.x](#FigureReturnStatementSyntax) shows code for a function declaration in C#.
+The following diagram shows the syntax for a return statement.
 
-<a id="FigureReturnStatementSyntax"></a>
-
-![Figure 5.x C/C++ syntax for a return statement](./images/return-statement.png "C/C++ syntax for a return statement")
-<div class="caption"><span class="caption-figure-nbr">Figure 5.x: </span>C/C++ syntax for a return statement</div><br/>
-
-- The [expression](../../../../part-1-instructions/2-communicating-syntax/1-concepts/03-expression) in the return statement is optional so that you can call it within both functions and procedures.
-  - In a function, your return statement **must** have the value to return in the expression.
-  - In a procedure, your return statement **must not** have a value - it does not return a value.
-- When the return statement is executed the current function or procedure ends.
-- In a function, value of the expression in the return statement is returned to the function call that started the function.
-
+![C/C++ syntax for a return statement](./images/return-statement.png "C/C++ syntax for a return statement")
 :::
+
+A return statement is quite simple -- it is the word "return", followed by an optional expression, then a semicolon.
+The use of an expression depends on whether you are using the return statement in a function or procedure:
+
+- In a function, a return statement **must** have an expression.
+- In a procedure, a return statement **must not** have an expression.
+
+This is because a function returns a value, whereas a procedure does not.
+
+When the return statement is executed the function or procedure ends and control is passed back to the calling statement.
+If the return statement is in a function, the expression is evaluated and the value is returned to the caller.
 
 ## Examples
 
-[Listing 5.x](#ListingReturnStatement) illustrates the point that `return` ends the current function, with only the first `write_line` call being run in the `test_return()` function.
-
-<a id="ListingReturnStatement"></a>
+The following code shows the use of a return statement.
+Note how the final line in `test_return` does not execute because the return statement is before it in the sequence of instructions.
 
 ```cpp
-/* Program: test-return.cs */
 #include "splashkit.h"
 
 using std::to_string;
+
+int main()
+{
+    write_line("Calling test_return - the value " + to_string(test_return()) + " is returned\n");
+    return 0;
+}
 
 int test_return() 
 {
@@ -156,14 +149,20 @@ int test_return()
     return 3;
     write_line("Cannot be run as code returned above!");
 }
-
-int main() {
-  write_line("Calling test_return - the value " + to_string(test_return()) + " is returned\n");
-  return 0;
-}
 ```
-<div class="caption"><span class="caption-figure-nbr">Listing 5.x: </span>Example illustrating return in action</div>
 
-For other examples, have a look back at the [functions page](../04-function-decl). The `square` function uses the return statement to return the squared value, while the `point_in_circle` returns the value from the comparison as this indicates if the point is within the circle.
+Let's explore how this code works.
 
 <MySwiper client:only height="" images={sliderReturn}></MySwiper>
+
+For other examples, have a look back at the [example using parameters](../04-parameter#functions-with-parameters). The `square` function uses the return statement to return the squared value, while `point_in_circle` returns the value from the comparison to indicate if the point is within the circle.
+
+:::note[Summary]
+
+- Return is an **instruction** allowing you to jump out of the current function or procedure and back to the calling code.
+- Return also allows you to specify the value to give back to the calling code from a function.
+- Return statements should be combined with [branching](../../../../part-1-instructions/3-control-flow/1-concepts/03-0-branching) statements to make sure the function or procedure is ended only when necessary.
+- In a function, a return statement **must** have an expression.
+- In a procedure, a return statement **must not** have an expression.
+
+:::
