--- a/src/content/docs/book/part-0-getting-started/2-computer-use/0-installation/0-overview.mdx
+++ b/src/content/docs/book/part-0-getting-started/2-computer-use/0-installation/0-overview.mdx
@@ -1,7 +1,5 @@
 ---
-title: Setup Guides
-sidebar:
-  label: "Set up my ..."
+title: Overview
 ---
 
 import { CardGrid } from "@astrojs/starlight/components";
@@ -14,19 +12,19 @@ Click on one of the supported operating systems below to see more info about the
 <CardGrid>
   <LinkCard
     title="Raspberry Pi"
-    href="/book/part-0-getting-started/2-computer-use/2-put-together/1-0-set-up-my/#raspberry-pi"
+    href="#raspberry-pi"
   />
   <LinkCard
     title="macOS"
-    href="/book/part-0-getting-started/2-computer-use/2-put-together/1-0-set-up-my/#macos"
+    href="#macos"
   />
   <LinkCard
     title="Windows"
-    href="/book/part-0-getting-started/2-computer-use/2-put-together/1-0-set-up-my/#windows"
+    href="#windows"
   />
   <LinkCard
     title="Linux"
-    href="/book/part-0-getting-started/2-computer-use/2-put-together/1-0-set-up-my/#linux"
+    href="#linux"
   />
 </CardGrid>
 :::
@@ -44,12 +42,12 @@ These guides have been created to help you set up your computer and install the 
 
   <LinkCard
     title="Raspberry Pi Hardware Setup Guide"
-    href="/book/part-0-getting-started/2-computer-use/2-put-together/2-0-pi-computer/"
+    href="/book/part-0-getting-started/2-computer-use/0-installation/2-2-pi-computer/"
     description="Go to 'Build my Raspberry Pi' page"
   />
   <LinkCard
     title="Raspberry Pi Software Setup Guide"
-    href="/book/part-0-getting-started/2-computer-use/2-put-together/2-1-setup-pi/"
+    href="/book/part-0-getting-started/2-computer-use/0-installation/2-3-setup-pi/"
     description="Go to 'Set up my Raspberry Pi' page"
   />
 </Card>
@@ -65,7 +63,7 @@ These guides have been created to help you set up your computer and install the 
 
   <LinkCard
     title="macOS Software Setup Guide"
-    href="/book/part-0-getting-started/2-computer-use/2-put-together/2-3-setup-macos/"
+    href="/book/part-0-getting-started/2-computer-use/0-installation/2-1-setup-macos/"
     description="Go to 'Set up my macOS' page"
   />
 </Card>
@@ -81,12 +79,12 @@ These guides have been created to help you set up your computer and install the 
 
   <LinkCard
     title="Windows Software Setup Guide (using WSL)"
-    href="/book/part-0-getting-started/2-computer-use/2-put-together/2-4-setup-win-wsl/"
+    href="/book/part-0-getting-started/2-computer-use/0-installation/2-5-setup-win-wsl/"
     description="Go to 'Set up my Windows (with WSL)' page"
   />
   <LinkCard
     title="Windows Software Setup Guide (using MSYS2)"
-    href="/book/part-0-getting-started/2-computer-use/2-put-together/2-5-setup-win-msys/"
+    href="/book/part-0-getting-started/2-computer-use/0-installation/2-6-setup-win-msys/"
     description="Go to 'Set up my Windows (with MSYS2)' page"
   />
 </Card>
@@ -102,7 +100,7 @@ These guides have been created to help you set up your computer and install the 
 
   <LinkCard
     title="Set up my Linux Box"
-    href="/book/part-0-getting-started/2-computer-use/2-put-together/2-2-setup-linux/"
+    href="/book/part-0-getting-started/2-computer-use/0-installation/2-0-setup-linux/"
     description="Go to 'Set up my Linux Box' page"
   />
 </Card>
@@ -118,7 +116,7 @@ To get help with troubleshooting installation issues (or any other troubleshooti
 
   <LinkCard
     title="General Troubleshooting"
-    href="/book/part-0-getting-started/2-computer-use/2-put-together/3-0-troubleshooting-install/#general-troubleshooting"
+    href="/book/part-0-getting-started/2-computer-use/0-installation/3-0-troubleshooting-install/#general-troubleshooting"
     description="Go to the 'General Troubleshooting' section of the 'Installation Troubleshooting' page"
   />
 
@@ -126,7 +124,7 @@ To get help with troubleshooting installation issues (or any other troubleshooti
 
   <LinkCard
     title="Specific Issues"
-    href="/book/part-0-getting-started/2-computer-use/2-put-together/3-0-troubleshooting-install/#specific-issues"
+    href="/book/part-0-getting-started/2-computer-use/0-installation/3-0-troubleshooting-install/#specific-issues"
     description="Go to the 'Specific Issues' section of the 'Installation Troubleshooting' page"
   />
 </Card>
