Fix broken links

--- a/src/content/docs/book/part-0-getting-started/2-computer-use/0-installation/2-2-pi-computer.mdx
+++ b/src/content/docs/book/part-0-getting-started/2-computer-use/0-installation/2-2-pi-computer.mdx
@@ -231,7 +231,7 @@ We will first look at the hardware you need, and where you can get it, and then 
 Not sure if you want the hardware, but still want to set something like this up? There are some alternatives.
 
 Rather than getting a new physical machine, you can download virtual machine software and follow the software setup to get it working in there.
-[Set up my Linux Box](/book/part-0-getting-started/2-computer-use/2-put-together/2-2-setup-linux/)
+[Set up my Linux Box](../../0-installation/2-0-setup-linux)
 :::
 
 Let's get going!
@@ -261,7 +261,7 @@ This is the list of components we used to build our multi-tool with links to Aus
 ## 2. Building your multi-tool
 
 :::tip
-Using your own SD card? Make sure you have installed Raspberry Pi OS on it. You can find the instructions in the [Set up my Raspberry Pi](/book/part-0-getting-started/2-computer-use/2-put-together/2-1-setup-pi/) section.
+Using your own SD card? Make sure you have installed Raspberry Pi OS on it. You can find the instructions in the [Set up my Raspberry Pi](../../0-installation/2-3-setup-pi) section.
 If we have provided you with an SD card, it will already have the OS installed.
 :::
 
@@ -519,4 +519,4 @@ You should now have a fully constructed Raspberry Pi multi-tool.
 
 ![Image of the full Raspberry Pi multi-tool](./images/Pi-Computer/CompeteSetup.jpg)
 
-To continue the setup process, continue to the next page: [Set up my Raspberry Pi](/book/part-0-getting-started/2-computer-use/2-put-together/2-1-setup-pi/) for instructions on how to install the operating system and configure the Pi.
+To continue the setup process, continue to the next page: [Set up my Raspberry Pi](../../0-installation/2-3-setup-pi) for instructions on how to install the operating system and configure the Pi.
