Fix broken links

--- a/src/content/docs/book/part-0-getting-started/3-building-programs/2-put-together/2-hello-world-gui.mdx
+++ b/src/content/docs/book/part-0-getting-started/3-building-programs/2-put-together/2-hello-world-gui.mdx
@@ -51,16 +51,8 @@ We would get this output in the Terminal (shown in the Green Box):
 ![A VS Code window showing the program being run in the terminal.](./images/cli-hello-world-splashkit.png)
 :::
 
-:::caution['dotnet run' not working?]
-If you were not able to install SplashKit globally in the installation guide in the [previous chapter](../../../2-computer-use/2-put-together/2-0-set-up-my), you can use the following command instead:
-
-```bash
-skm dotnet run
-```
-
-You will need to add **`skm`** to the front of your `dotnet` terminal commands.
-
-You can find the updated commands to use in the [No SplashKit Global Install](../../../2-computer-use/2-put-together/3-0-troubleshooting-install/#no-splashkit-global-install) section on the Installation Troubleshooting page from the previous chapter.
+:::tip[Troubleshooting tip:]
+If the `dotnet run` command is not working, and you were not able to install SplashKit globally, go to the [No SplashKit Global Install](../../../2-computer-use/0-installation/3-0-troubleshooting-install/#no-splashkit-global-install) section on the Installation Troubleshooting page to see the alternate commands to use.
 :::
 
 ## Graphical Hello World
