--- a/src/content/docs/book/part-1-instructions/3-control-flow/1-concepts/08-hand-execution.mdx
+++ b/src/content/docs/book/part-1-instructions/3-control-flow/1-concepts/08-hand-execution.mdx
@@ -1,6 +1,11 @@
 ---
 title: Hand Execution
 ---
+import { YouTube } from 'astro-embed';
+
+<div class="not-content">
+  <YouTube id="QS7vxAsCLEI" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+</div>
 
 Running code yourself can be a great way to help you understand how a program works. This is useful both for functioning programs, and for when you are thinking through issues that have arisen.
 
