--- a/src/content/docs/book/part-2-organised-code/00-part-2-programs-as-organised-code.mdx
+++ b/src/content/docs/book/part-2-organised-code/00-part-2-programs-as-organised-code.mdx
@@ -1,8 +1,13 @@
 ---
 title: Introducing Code Organisation
 ---
+import { YouTube } from 'astro-embed';
 
 Welcome to the Part 2 of this journey.
+
+<div class="not-content">
+  <YouTube id="7WlGXFNK7fE" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+</div>
 
 In Part 1 you have explored programs as instructions, and the structured programming principles of **sequence**, **selection**, and **repetition**.
 At this point, the amount of code we are writing is starting to get to a size where it is too much to deal with. We need new tools to help us manage this complexity and to help us structure the data within our programs.
