--- a/src/content/docs/book/part-0-getting-started/3-building-programs/2-put-together/2-hello-world-gui.mdx
+++ b/src/content/docs/book/part-0-getting-started/3-building-programs/2-put-together/2-hello-world-gui.mdx
@@ -159,11 +159,11 @@ Copy the following code and paste it into your Program.cs file (replacing existi
 using static SplashKitSDK.SplashKit;
 
 // download resources
-DownloadSoundEffect("Hello World", "https://github.com/splashkit/the-programmers-field-guide/raw/main/public/resources/code-examples/part-0/hello-world-snippet-saddle-club.ogg", 443);
-DownloadFont("main", "https://github.com/splashkit/the-programmers-field-guide/raw/main/public/resources/code-examples/part-0/Roboto-Italic.ttf", 443);
-DownloadBitmap("Earth", "https://github.com/splashkit/the-programmers-field-guide/raw/main/public/resources/code-examples/part-0/earth.png", 443);
-DownloadBitmap("SmallEarth", "https://github.com/splashkit/the-programmers-field-guide/raw/main/public/resources/code-examples/part-0/earth-small.png", 443);
-DownloadBitmap("SplashKitBox", "https://github.com/splashkit/the-programmers-field-guide/raw/main/public/resources/code-examples/part-0/skbox.png", 443);
+DownloadSoundEffect("Hello World", "https://programmers.guide/resources/code-examples/part-0/hello-world-snippet-saddle-club.ogg", 443);
+DownloadFont("main", "https://programmers.guide/resources/code-examples/part-0/Roboto-Italic.ttf", 443);
+DownloadBitmap("Earth", "https://programmers.guide/resources/code-examples/part-0/earth.png", 443);
+DownloadBitmap("SmallEarth", "https://programmers.guide/resources/code-examples/part-0/earth-small.png", 443);
+DownloadBitmap("SplashKitBox", "https://programmers.guide/resources/code-examples/part-0/skbox.png", 443);
 
 OpenWindow("Hello World: Using Resources with SplashKit", 800, 600);
 PlaySoundEffect("Hello World");
