Fix images and add videos up to indirect access

--- a/src/content/docs/book/part-2-organised-code/2-organising-code/0-overview.mdx
+++ b/src/content/docs/book/part-2-organised-code/2-organising-code/0-overview.mdx
@@ -1,6 +1,11 @@
 ---
 title: Overview
 ---
+import { YouTube } from 'astro-embed';
+
+<div class="not-content">
+  <YouTube id="eeu61YcSUgE" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+</div>
 
 This part of the journey should really help make programming so much easier. With a few new tools, we can start to break down our code into smaller sections, meaning we do not have to keep so much logic in our heads all at once.
 
