--- a/src/content/docs/book/part-2-organised-code/3-structuring-data/0-overview.mdx
+++ b/src/content/docs/book/part-2-organised-code/3-structuring-data/0-overview.mdx
@@ -1,6 +1,11 @@
 ---
 title: "Overview"
 ---
+import { YouTube } from 'astro-embed';
+
+<div class="not-content">
+  <YouTube id="7Aqr6KaRrUc" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+</div>
 
 In Chapter 2.2, we saw how to organise our code into functions and procedures. This has allowed us to start building larger programs. However, we haven't yet seen the tools we can use to organise data.
 
