--- a/src/content/docs/book/part-2-organised-code/4-indirect-access/0-overview.mdx
+++ b/src/content/docs/book/part-2-organised-code/4-indirect-access/0-overview.mdx
@@ -1,6 +1,11 @@
 ---
 title: Overview
 ---
+import { YouTube } from 'astro-embed';
+
+<div class="not-content">
+  <YouTube id="hOtfYT-IWDI" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+</div>
 
 So far we have seen how to work with data, structure logic using sequence and control flow statements, organise our code in functions and procedures, and structure data with structs and enums. Though this material we have seen how important it is to be able to break down our code into manageable chunks.
 
@@ -8,6 +13,3 @@ One challenge we are facing in the fly catch game has been the ability to separa
 
 In this chapter we will see new mechanics that allow us to give access to values declared in our code. Using this feature we can start to set up relationships between entities, and use these ideas to pass parameters that allow the called code to update the value within the passed variable.
 
-## Overview of indirect access
-
-## Learning goals
