--- a/src/content/docs/book/part-2-organised-code/4-indirect-access/1-concepts/03-hand-execution.mdx
+++ b/src/content/docs/book/part-2-organised-code/4-indirect-access/1-concepts/03-hand-execution.mdx
@@ -1,6 +1,11 @@
 ---
 title: Hand Execution
 ---
+import { YouTube } from 'astro-embed';
+
+<div class="not-content">
+  <YouTube id="2MmqrrgBJq8" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+</div>
 
 Hand execution can be a great tool to help you understand and visualise what is happening when you run code that includes pointers.
 
